// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UploadPhoto /> check how renders default view should render default view after deleting current photo 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: 2.4rem;
}

.c0 .input {
  display: none;
}

.c0 .label {
  cursor: pointer;
  display: inline-block;
}

.c0 .label > button {
  pointer-events: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
}

.c0 .label:hover > button {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c2 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
}

.c2:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c3 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.4rem;
  margin-top: calc(1.2rem + 0rem);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c1 > *:not(:last-child) {
  margin-right: 2.4rem;
}

<div
    class="c0"
  >
    <div
      class="c1"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <label
        class="label"
        for="photo"
      >
        <button
          class="c2"
          color="blue"
          type="button"
        >
          Upload photo
        </button>
      </label>
    </div>
    <span
      class="c3"
      color=""
      display="inline-block"
      overflow="visible"
      size="2"
      spacing="0px"
      transform=""
    >
      Photo is optional. Max size is 6 MB. Available extensions are JPG and PNG
    </span>
    <input
      class="input"
      data-testid="UploadPhoto-input"
      id="photo"
      name="photo"
      type="file"
    />
  </div>
</DocumentFragment>
`;

exports[`<UploadPhoto /> check how renders default view should render default view when file is uploaded and deleted 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: 2.4rem;
}

.c0 .input {
  display: none;
}

.c0 .label {
  cursor: pointer;
  display: inline-block;
}

.c0 .label > button {
  pointer-events: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
}

.c0 .label:hover > button {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c2 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
}

.c2:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c3 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.4rem;
  margin-top: calc(1.2rem + 0rem);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c1 > *:not(:last-child) {
  margin-right: 2.4rem;
}

<div
    class="c0"
  >
    <div
      class="c1"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <label
        class="label"
        for="photo"
      >
        <button
          class="c2"
          color="blue"
          type="button"
        >
          Upload photo
        </button>
      </label>
    </div>
    <span
      class="c3"
      color=""
      display="inline-block"
      overflow="visible"
      size="2"
      spacing="0px"
      transform=""
    >
      Photo is optional. Max size is 6 MB. Available extensions are JPG and PNG
    </span>
    <input
      class="input"
      data-testid="UploadPhoto-input"
      id="photo"
      name="photo"
      type="file"
    />
  </div>
</DocumentFragment>
`;

exports[`<UploadPhoto /> check how renders default view should render default view when files field has 0 length 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: 2.4rem;
}

.c0 .input {
  display: none;
}

.c0 .label {
  cursor: pointer;
  display: inline-block;
}

.c0 .label > button {
  pointer-events: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
}

.c0 .label:hover > button {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c2 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
}

.c2:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c3 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.4rem;
  margin-top: calc(1.2rem + 0rem);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c1 > *:not(:last-child) {
  margin-right: 2.4rem;
}

<div
    class="c0"
  >
    <div
      class="c1"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <label
        class="label"
        for="photo"
      >
        <button
          class="c2"
          color="blue"
          type="button"
        >
          Upload photo
        </button>
      </label>
    </div>
    <span
      class="c3"
      color=""
      display="inline-block"
      overflow="visible"
      size="2"
      spacing="0px"
      transform=""
    >
      Photo is optional. Max size is 6 MB. Available extensions are JPG and PNG
    </span>
    <input
      class="input"
      data-testid="UploadPhoto-input"
      id="photo"
      name="photo"
      type="file"
    />
  </div>
</DocumentFragment>
`;

exports[`<UploadPhoto /> check how renders should render default view when hasCurrentPhoto is false 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: 2.4rem;
}

.c0 .input {
  display: none;
}

.c0 .label {
  cursor: pointer;
  display: inline-block;
}

.c0 .label > button {
  pointer-events: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
}

.c0 .label:hover > button {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c2 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
}

.c2:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c3 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.4rem;
  margin-top: calc(1.2rem + 0rem);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c1 > *:not(:last-child) {
  margin-right: 2.4rem;
}

<div
    class="c0"
  >
    <div
      class="c1"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <label
        class="label"
        for="photo"
      >
        <button
          class="c2"
          color="blue"
          type="button"
        >
          Upload photo
        </button>
      </label>
    </div>
    <span
      class="c3"
      color=""
      display="inline-block"
      overflow="visible"
      size="2"
      spacing="0px"
      transform=""
    >
      Photo is optional. Max size is 6 MB. Available extensions are JPG and PNG
    </span>
    <input
      class="input"
      data-testid="UploadPhoto-input"
      id="photo"
      name="photo"
      type="file"
    />
  </div>
</DocumentFragment>
`;

exports[`<UploadPhoto /> check how renders should render with delete current button when hasCurrentPhoto is true 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: 2.4rem;
}

.c0 .input {
  display: none;
}

.c0 .label {
  cursor: pointer;
  display: inline-block;
}

.c0 .label > button {
  pointer-events: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
}

.c0 .label:hover > button {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c2 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
}

.c2:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c3 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: transparent;
  border: 2px solid #F22613;
  color: #F22613;
}

.c3:hover {
  border-color: #F94D2A;
  color: #F94D2A;
}

.c4 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.4rem;
  margin-top: calc(1.2rem + 0rem);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c1 > *:not(:last-child) {
  margin-right: 2.4rem;
}

<div
    class="c0"
  >
    <div
      class="c1"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <label
        class="label"
        for="photo"
      >
        <button
          class="c2"
          color="blue"
          type="button"
        >
          Upload photo
        </button>
      </label>
      <button
        class="c3"
        color="red"
        type="button"
      >
        Delete current
      </button>
    </div>
    <span
      class="c4"
      color=""
      display="inline-block"
      overflow="visible"
      size="2"
      spacing="0px"
      transform=""
    >
      Photo is optional. Max size is 6 MB. Available extensions are JPG and PNG
    </span>
    <input
      class="input"
      data-testid="UploadPhoto-input"
      id="photo"
      name="photo"
      type="file"
    />
  </div>
</DocumentFragment>
`;

exports[`<UploadPhoto /> check how renders show errors should render delete button and info when error appeared and then photo is uploaded correctly 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: 2.4rem;
}

.c0 .input {
  display: none;
}

.c0 .label {
  cursor: pointer;
  display: inline-block;
}

.c0 .label > button {
  pointer-events: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
}

.c0 .label:hover > button {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c2 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
}

.c2:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c3 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: transparent;
  border: 2px solid #F22613;
  color: #F22613;
}

.c3:hover {
  border-color: #F94D2A;
  color: #F94D2A;
}

.c5 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 1.3rem;
  max-width: 75%;
}

.c6 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.3rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c1 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 1.2rem;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c4 > *:not(:last-child) {
  margin-right: 2.4rem;
}

<div
    class="c0"
  >
    <div
      class="c1"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <label
        class="label"
        for="photo"
      >
        <button
          class="c2"
          color="blue"
          type="button"
        >
          Upload photo
        </button>
      </label>
      <button
        class="c3"
        color="red"
        type="button"
      >
        Delete
      </button>
    </div>
    <div
      class="c4"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <span
        class="c5"
        color=""
        display="inline-block"
        overflow="hidden"
        size="1"
        spacing="0px"
        transform=""
      >
        Name: boots.png
      </span>
      <span
        class="c6"
        color=""
        display="inline-block"
        overflow="visible"
        size="1"
        spacing="0px"
        transform=""
      >
        Size: 6 MB
      </span>
    </div>
    <input
      class="input"
      data-testid="UploadPhoto-input"
      id="photo"
      name="photo"
      type="file"
    />
  </div>
</DocumentFragment>
`;

exports[`<UploadPhoto /> check how renders show errors should render with error, delete button and file info when image type is incorrect 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: 2.4rem;
}

.c0 .input {
  display: none;
}

.c0 .label {
  cursor: pointer;
  display: inline-block;
}

.c0 .label > button {
  pointer-events: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
}

.c0 .label:hover > button {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c2 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
}

.c2:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c3 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: transparent;
  border: 2px solid #F22613;
  color: #F22613;
}

.c3:hover {
  border-color: #F94D2A;
  color: #F94D2A;
}

.c5 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 1.3rem;
  max-width: 75%;
}

.c6 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.3rem;
}

.c7 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #F22613;
  font-size: 1.3rem;
  margin-top: calc(1.2rem + 0rem);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c1 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 1.2rem;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c4 > *:not(:last-child) {
  margin-right: 2.4rem;
}

<div
    class="c0"
  >
    <div
      class="c1"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <label
        class="label"
        for="photo"
      >
        <button
          class="c2"
          color="blue"
          type="button"
        >
          Upload photo
        </button>
      </label>
      <button
        class="c3"
        color="red"
        type="button"
      >
        Delete
      </button>
    </div>
    <div
      class="c4"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <span
        class="c5"
        color=""
        display="inline-block"
        overflow="hidden"
        size="1"
        spacing="0px"
        transform=""
      >
        Name: boots.svg
      </span>
      <span
        class="c6"
        color=""
        display="inline-block"
        overflow="visible"
        size="1"
        spacing="0px"
        transform=""
      >
        Size: 6 MB
      </span>
    </div>
    <span
      class="c7"
      color="#F22613"
      display="inline-block"
      overflow="visible"
      size="1"
      spacing="0px"
      transform=""
    >
      File extension is not valid (JPG and PNG only)
    </span>
    <input
      class="input"
      data-testid="UploadPhoto-input"
      id="photo"
      name="photo"
      type="file"
    />
  </div>
</DocumentFragment>
`;

exports[`<UploadPhoto /> check how renders show errors should render with error, delete button and file info when size is too big 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: 2.4rem;
}

.c0 .input {
  display: none;
}

.c0 .label {
  cursor: pointer;
  display: inline-block;
}

.c0 .label > button {
  pointer-events: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
}

.c0 .label:hover > button {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c2 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
}

.c2:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c3 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: transparent;
  border: 2px solid #F22613;
  color: #F22613;
}

.c3:hover {
  border-color: #F94D2A;
  color: #F94D2A;
}

.c5 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 1.3rem;
  max-width: 75%;
}

.c6 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.3rem;
}

.c7 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #F22613;
  font-size: 1.3rem;
  margin-top: calc(1.2rem + 0rem);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c1 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 1.2rem;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c4 > *:not(:last-child) {
  margin-right: 2.4rem;
}

<div
    class="c0"
  >
    <div
      class="c1"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <label
        class="label"
        for="photo"
      >
        <button
          class="c2"
          color="blue"
          type="button"
        >
          Upload photo
        </button>
      </label>
      <button
        class="c3"
        color="red"
        type="button"
      >
        Delete
      </button>
      <button
        class="c3"
        color="red"
        type="button"
      >
        Delete current
      </button>
    </div>
    <div
      class="c4"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <span
        class="c5"
        color=""
        display="inline-block"
        overflow="hidden"
        size="1"
        spacing="0px"
        transform=""
      >
        Name: boots.png
      </span>
      <span
        class="c6"
        color=""
        display="inline-block"
        overflow="visible"
        size="1"
        spacing="0px"
        transform=""
      >
        Size: 6,1 MB
      </span>
    </div>
    <span
      class="c7"
      color="#F22613"
      display="inline-block"
      overflow="visible"
      size="1"
      spacing="0px"
      transform=""
    >
      Maximum available size is 6 MB
    </span>
    <input
      class="input"
      data-testid="UploadPhoto-input"
      id="photo"
      name="photo"
      type="file"
    />
  </div>
</DocumentFragment>
`;

exports[`<UploadPhoto /> check how renders successful upload should render delete button and correct info when one photo is uploaded after another 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: 2.4rem;
}

.c0 .input {
  display: none;
}

.c0 .label {
  cursor: pointer;
  display: inline-block;
}

.c0 .label > button {
  pointer-events: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
}

.c0 .label:hover > button {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c2 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
}

.c2:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c3 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: transparent;
  border: 2px solid #F22613;
  color: #F22613;
}

.c3:hover {
  border-color: #F94D2A;
  color: #F94D2A;
}

.c5 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 1.3rem;
  max-width: 75%;
}

.c6 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.3rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c1 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 1.2rem;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c4 > *:not(:last-child) {
  margin-right: 2.4rem;
}

<div
    class="c0"
  >
    <div
      class="c1"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <label
        class="label"
        for="photo"
      >
        <button
          class="c2"
          color="blue"
          type="button"
        >
          Upload photo
        </button>
      </label>
      <button
        class="c3"
        color="red"
        type="button"
      >
        Delete
      </button>
    </div>
    <div
      class="c4"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <span
        class="c5"
        color=""
        display="inline-block"
        overflow="hidden"
        size="1"
        spacing="0px"
        transform=""
      >
        Name: photo2.jpg
      </span>
      <span
        class="c6"
        color=""
        display="inline-block"
        overflow="visible"
        size="1"
        spacing="0px"
        transform=""
      >
        Size: 6 MB
      </span>
    </div>
    <input
      class="input"
      data-testid="UploadPhoto-input"
      id="photo"
      name="photo"
      type="file"
    />
  </div>
</DocumentFragment>
`;

exports[`<UploadPhoto /> check how renders successful upload should render delete button and info when photo is uploaded 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: 2.4rem;
}

.c0 .input {
  display: none;
}

.c0 .label {
  cursor: pointer;
  display: inline-block;
}

.c0 .label > button {
  pointer-events: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
}

.c0 .label:hover > button {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c2 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
}

.c2:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c3 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: transparent;
  border: 2px solid #F22613;
  color: #F22613;
}

.c3:hover {
  border-color: #F94D2A;
  color: #F94D2A;
}

.c5 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 1.3rem;
  max-width: 75%;
}

.c6 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.3rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c1 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 1.2rem;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c4 > *:not(:last-child) {
  margin-right: 2.4rem;
}

<div
    class="c0"
  >
    <div
      class="c1"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <label
        class="label"
        for="photo"
      >
        <button
          class="c2"
          color="blue"
          type="button"
        >
          Upload photo
        </button>
      </label>
      <button
        class="c3"
        color="red"
        type="button"
      >
        Delete
      </button>
    </div>
    <div
      class="c4"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <span
        class="c5"
        color=""
        display="inline-block"
        overflow="hidden"
        size="1"
        spacing="0px"
        transform=""
      >
        Name: boots.jpg
      </span>
      <span
        class="c6"
        color=""
        display="inline-block"
        overflow="visible"
        size="1"
        spacing="0px"
        transform=""
      >
        Size: 6 MB
      </span>
    </div>
    <input
      class="input"
      data-testid="UploadPhoto-input"
      id="photo"
      name="photo"
      type="file"
    />
  </div>
</DocumentFragment>
`;

exports[`<UploadPhoto /> check how renders successful upload should render delete button and info when the same photo is uploaded twice 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: 2.4rem;
}

.c0 .input {
  display: none;
}

.c0 .label {
  cursor: pointer;
  display: inline-block;
}

.c0 .label > button {
  pointer-events: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
}

.c0 .label:hover > button {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c2 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
}

.c2:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c3 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: transparent;
  border: 2px solid #F22613;
  color: #F22613;
}

.c3:hover {
  border-color: #F94D2A;
  color: #F94D2A;
}

.c5 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 1.3rem;
  max-width: 75%;
}

.c6 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.3rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c1 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 1.2rem;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c4 > *:not(:last-child) {
  margin-right: 2.4rem;
}

<div
    class="c0"
  >
    <div
      class="c1"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <label
        class="label"
        for="photo"
      >
        <button
          class="c2"
          color="blue"
          type="button"
        >
          Upload photo
        </button>
      </label>
      <button
        class="c3"
        color="red"
        type="button"
      >
        Delete
      </button>
    </div>
    <div
      class="c4"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <span
        class="c5"
        color=""
        display="inline-block"
        overflow="hidden"
        size="1"
        spacing="0px"
        transform=""
      >
        Name: boots.jpg
      </span>
      <span
        class="c6"
        color=""
        display="inline-block"
        overflow="visible"
        size="1"
        spacing="0px"
        transform=""
      >
        Size: 6 MB
      </span>
    </div>
    <input
      class="input"
      data-testid="UploadPhoto-input"
      id="photo"
      name="photo"
      type="file"
    />
  </div>
</DocumentFragment>
`;
